methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:65: error: expected start of definition
override (run()){
         ^